testsuite/lab2-testsuite/bad/redecl_var.cc
int main() {
        let int x;
        let int x;
	return 0 ;
}
